--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -6,72 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
-
-    <script>
-        $(document).ready(async function () {
-            // Hole Daten aus dem Session Storage
-            let participantId = sessionStorage.getItem("participantId");
-            let participantType = sessionStorage.getItem("participantType");
-
-            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Patienten handelt
-            if (participantType != "Patient") {
-                window.location.href = "../index.html";
-            }
-
-            // Hole Tabelle als jquery Variable
-            let reportTabelle = $('#reportTabelle');
-
-            // Rest Aufruf um alle Doktoren zu erhalten
-            const doctorResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor", {
-                method: 'GET',
-                credentials: 'include'
-            });
-            const doctorArray = await doctorResponse.json();
-
-            /*
-            Rest Aufruf um alle Reports des Patienten zu erhalten.
-            Aufgrund der Regeln in der Blockchain werden hier nur die Reports zurückgegeben, die dem Aufrufer zugeordnet sind.
-             */
-            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Report", {
-                method: 'GET',
-                credentials: 'include'
-            });
-            const reportArray = await response.json(); //extract JSON from the http response
-
-            // Gebe Informationen von allen Reports aus
-            reportArray.forEach(function (report) {
-                // Hole Id des Doktors, der den Report hochgeladen hat
-                let doctorId = report.uploadedForDr.split('Doctor#')[1];
-
-                // Hole Doktor mit der übergebenen Id aus dem DoktorArray
-                let doctor = doctorArray.find(d => d.personID === doctorId);
-
-                let date = report.date.split('T')[0];
-
-                let appendString = "<tr>" +
-                    "<td>" + report.reportID + "</td>" +
-                    "<td>" + report.title + "</td>" +
-                    "<td>" + report.description + "</td>" +
-                    "<td>" + date + "</td>" +
-                    "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>" +
-                    "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td>" +
-                    "</tr>";
-
-                reportTabelle.append(appendString);
-            });
-        })
-    </script>
 </head>
 <body class="patient-dokumente">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -97,10 +44,14 @@
     <div class="row">
         <div class="col-sm-5">
             <form>
-                <input type="text" class="form-control mb-2" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel">
-                <input type="text" class="form-control mb-2" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung">
-                <input type="text" class="form-control mb-2" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum">
-                <input type="text" class="form-control mb-2" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
+                <input type="text" class="form-control mb-2" id="inputTitel" onkeyup="filterReportTable()"
+                       placeholder="Titel">
+                <input type="text" class="form-control mb-2" id="inputBeschreibung" onkeyup="filterReportTable()"
+                       placeholder="Beschreibung">
+                <input type="text" class="form-control mb-2" id="inputDatum" onkeyup="filterReportTable()"
+                       placeholder="Datum">
+                <input type="text" class="form-control mb-2" id="inputHochgeladenVon" onkeyup="filterReportTable()"
+                       placeholder="Hochgeladen von">
             </form>
         </div>
     </div>
@@ -108,14 +59,14 @@
         <div class="col-sm-12">
             <table class="table table-hover">
                 <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Titel</th>
-                        <th scope="col">Beschreibung</th>
-                        <th scope="col">Datum</th>
-                        <th scope="col">Hochgeladen von</th>
-                        <th scope="col"></th>
-                    </tr>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Titel</th>
+                    <th scope="col">Beschreibung</th>
+                    <th scope="col">Datum</th>
+                    <th scope="col">Hochgeladen von</th>
+                    <th scope="col"></th>
+                </tr>
                 </thead>
                 <tbody id="reportTabelle">
 
@@ -128,9 +79,15 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-app.js"></script>
@@ -138,5 +95,60 @@
 
 <script src="../app.js"></script>
 <script type="text/javascript" src="../firebaseConfig.json"></script>
+
+<script>
+    $(document).ready(async function () {
+        // Hole Daten aus dem Session Storage
+        let participantId = sessionStorage.getItem("participantId");
+        let participantType = sessionStorage.getItem("participantType");
+
+        // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Patienten handelt
+        if (participantType != "Patient") {
+            window.location.href = "../index.html";
+        }
+
+        // Hole Tabelle als jquery Variable
+        let reportTabelle = $('#reportTabelle');
+
+        // Rest Aufruf um alle Doktoren zu erhalten
+        const doctorResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor", {
+            method: 'GET',
+            credentials: 'include'
+        });
+        const doctorArray = await doctorResponse.json();
+
+        /*
+        Rest Aufruf um alle Reports des Patienten zu erhalten.
+        Aufgrund der Regeln in der Blockchain werden hier nur die Reports zurückgegeben, die dem Aufrufer zugeordnet sind.
+         */
+        const response = await fetch(serverIp + "/api/org.oshealthrec.network.Report", {
+            method: 'GET',
+            credentials: 'include'
+        });
+        const reportArray = await response.json(); //extract JSON from the http response
+
+        // Gebe Informationen von allen Reports aus
+        reportArray.forEach(function (report) {
+            // Hole Id des Doktors, der den Report hochgeladen hat
+            let doctorId = report.uploadedForDr.split('Doctor#')[1];
+
+            // Hole Doktor mit der übergebenen Id aus dem DoktorArray
+            let doctor = doctorArray.find(d => d.personID === doctorId);
+
+            let date = report.date.split('T')[0];
+
+            let appendString = "<tr>" +
+                "<td>" + report.reportID + "</td>" +
+                "<td>" + report.title + "</td>" +
+                "<td>" + report.description + "</td>" +
+                "<td>" + date + "</td>" +
+                "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>" +
+                "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td>" +
+                "</tr>";
+
+            reportTabelle.append(appendString);
+        });
+    });
+</script>
 </body>
 </html>
