--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -6,116 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
-
-    <script>
-        $(document).ready(async function () {
-            // Hole Daten aus dem Session Storage
-            let participantId = sessionStorage.getItem("participantId");
-            let participantType = sessionStorage.getItem("participantType");
-            let patientProfileArrayJSON = sessionStorage.getItem("patientProfileArray");
-            let patientProfileArray = JSON.parse(patientProfileArrayJSON);
-
-            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Mitarbeiter handelt
-            if (participantType != "Employee") {
-                window.location.href = "../index.html";
-            }
-
-            // Hole Id des ausgewählten Patienten aus der URL
-            let searchParams = new URLSearchParams(window.location.search);
-            let patientId = searchParams.get('Id');
-            sessionStorage.setItem("chosenPatient", patientId);
-
-            // Hole Patienten mit der übergebenen Id aus dem PatientenArray
-            let patient = patientProfileArray.find(p => p.personID === patientId);
-
-            // Hole Textfelder als jquery Variable
-            let vorname = $('#vorname');
-            let nachname = $('#nachname');
-            let geschlecht = $('#geschlecht');
-            let geburtsdatum = $('#geburtsdatum');
-            let blutgruppe = $('#blutgruppe');
-            let notfallkontakt = $('#notfallkontakt');
-            let reportTabelle = $('#reportTabelle');
-
-            // Setz Werte der Textfelder
-            vorname.text(patient.givenname);
-            nachname.text(patient.surname);
-            geschlecht.text(patient.sex);
-            geburtsdatum.text(patient.birthday);
-            blutgruppe.text(patient.bloodType);
-            notfallkontakt.text(patient.emergency_contact);
-
-            // Rest Aufruf um alle Doktoren zu erhalten
-            const doctorResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor", {
-                method: 'GET',
-                credentials: 'include'
-            });
-            const doctorArray = await doctorResponse.json();
-
-            // Rest Aufruf um alle Mitarbeiter zu erhalten
-            const employeeResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Employee", {
-                method: 'GET',
-                credentials: 'include'
-            });
-            const employeeArray = await employeeResponse.json();
-
-            // Erstelle Filter um nur die Reports des ausgewählten Patienten anzuzueigen
-            let patientPath = "org.oshealthrec.network.Patient";
-            let filterString = "?filter=%7B%22where%22%3A%7B%22owner%22%3A%22resource%3A" + patientPath + "%23" + patientId + "%22%7D%7D";
-
-            // Hole Reports aus der Blockchain
-            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Report" + filterString, {
-                method: 'GET',
-                credentials: 'include'
-            });
-            let reportArray = await response.json();
-
-            // Gebe Daten für alle Reports aus
-            reportArray.forEach(function (report) {
-
-                // Hole Ids des Arztes und des Doktors des Reports
-                let doctorId = report.uploadedForDr.split("#")[1];
-                let uploadedById = report.uploadedby.split('#')[1];
-                let uploadedBy;
-
-                // Hole Doktor und Employee, für den der Report hochgeladen wurde, aus dem Arrays
-                let doctor = doctorArray.find(d => d.personID === doctorId);
-                if (doctorId != uploadedById) {
-                    uploadedBy = employeeArray.find(e => e.personID === uploadedById);
-                } else {
-                    uploadedBy = doctor;
-                }
-
-                let date = report.date.split('T')[0];
-
-                let appendString = "<tr>" +
-                    "<td>" + report.reportID + "</td>" +
-                    "<td>" + report.title + "</td>" +
-                    "<td>" + report.description + "</td>" +
-                    "<td>" + date + "</td>" +
-                    "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>";
-                if (sessionStorage.getItem("participantId") === doctorId) {
-                    appendString += "<td>" + uploadedBy.givenname + " " + uploadedBy.surname + "</td>";
-                } else {
-                    appendString += "<td>" + " " + "</td>";
-                }
-                appendString += "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td></tr>";
-
-                reportTabelle.append(appendString);
-            });
-        })
-    </script>
 </head>
 <body class="mitarbeiter-patient">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -138,10 +41,14 @@
     <div class="row">
         <div class="col-sm-4">
             <form>
-                <input type="text" class="form-control mb-2 mr-5" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel">
-                <input type="text" class="form-control mb-2 mr-5" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung">
-                <input type="text" class="form-control mb-2 mr-5" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum">
-                <input type="text" class="form-control mb-2 mr-5" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
+                <input type="text" class="form-control mb-2 mr-5" id="inputTitel" onkeyup="filterReportTable()"
+                       placeholder="Titel">
+                <input type="text" class="form-control mb-2 mr-5" id="inputBeschreibung" onkeyup="filterReportTable()"
+                       placeholder="Beschreibung">
+                <input type="text" class="form-control mb-2 mr-5" id="inputDatum" onkeyup="filterReportTable()"
+                       placeholder="Datum">
+                <input type="text" class="form-control mb-2 mr-5" id="inputHochgeladenVon" onkeyup="filterReportTable()"
+                       placeholder="Hochgeladen von">
             </form>
         </div>
         <div class="col-2">
@@ -192,9 +99,15 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-app.js"></script>
@@ -202,5 +115,104 @@
 
 <script src="../app.js"></script>
 <script type="text/javascript" src="../firebaseConfig.json"></script>
+
+<script>
+    $(document).ready(async function () {
+        // Hole Daten aus dem Session Storage
+        let participantId = sessionStorage.getItem("participantId");
+        let participantType = sessionStorage.getItem("participantType");
+        let patientProfileArrayJSON = sessionStorage.getItem("patientProfileArray");
+        let patientProfileArray = JSON.parse(patientProfileArrayJSON);
+
+        // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Mitarbeiter handelt
+        if (participantType != "Employee") {
+            window.location.href = "../index.html";
+        }
+
+        // Hole Id des ausgewählten Patienten aus der URL
+        let searchParams = new URLSearchParams(window.location.search);
+        let patientId = searchParams.get('Id');
+        sessionStorage.setItem("chosenPatient", patientId);
+
+        // Hole Patienten mit der übergebenen Id aus dem PatientenArray
+        let patient = patientProfileArray.find(p => p.personID === patientId);
+
+        // Hole Textfelder als jquery Variable
+        let vorname = $('#vorname');
+        let nachname = $('#nachname');
+        let geschlecht = $('#geschlecht');
+        let geburtsdatum = $('#geburtsdatum');
+        let blutgruppe = $('#blutgruppe');
+        let notfallkontakt = $('#notfallkontakt');
+        let reportTabelle = $('#reportTabelle');
+
+        // Setz Werte der Textfelder
+        vorname.text(patient.givenname);
+        nachname.text(patient.surname);
+        geschlecht.text(patient.sex);
+        geburtsdatum.text(patient.birthday);
+        blutgruppe.text(patient.bloodType);
+        notfallkontakt.text(patient.emergency_contact);
+
+        // Rest Aufruf um alle Doktoren zu erhalten
+        const doctorResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor", {
+            method: 'GET',
+            credentials: 'include'
+        });
+        const doctorArray = await doctorResponse.json();
+
+        // Rest Aufruf um alle Mitarbeiter zu erhalten
+        const employeeResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Employee", {
+            method: 'GET',
+            credentials: 'include'
+        });
+        const employeeArray = await employeeResponse.json();
+
+        // Erstelle Filter um nur die Reports des ausgewählten Patienten anzuzueigen
+        let patientPath = "org.oshealthrec.network.Patient";
+        let filterString = "?filter=%7B%22where%22%3A%7B%22owner%22%3A%22resource%3A" + patientPath + "%23" + patientId + "%22%7D%7D";
+
+        // Hole Reports aus der Blockchain
+        const response = await fetch(serverIp + "/api/org.oshealthrec.network.Report" + filterString, {
+            method: 'GET',
+            credentials: 'include'
+        });
+        let reportArray = await response.json();
+
+        // Gebe Daten für alle Reports aus
+        reportArray.forEach(function (report) {
+
+            // Hole Ids des Arztes und des Doktors des Reports
+            let doctorId = report.uploadedForDr.split("#")[1];
+            let uploadedById = report.uploadedby.split('#')[1];
+            let uploadedBy;
+
+            // Hole Doktor und Employee, für den der Report hochgeladen wurde, aus dem Arrays
+            let doctor = doctorArray.find(d => d.personID === doctorId);
+            if (doctorId != uploadedById) {
+                uploadedBy = employeeArray.find(e => e.personID === uploadedById);
+            } else {
+                uploadedBy = doctor;
+            }
+
+            let date = report.date.split('T')[0];
+
+            let appendString = "<tr>" +
+                "<td>" + report.reportID + "</td>" +
+                "<td>" + report.title + "</td>" +
+                "<td>" + report.description + "</td>" +
+                "<td>" + date + "</td>" +
+                "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>";
+            if (sessionStorage.getItem("participantId") === doctorId) {
+                appendString += "<td>" + uploadedBy.givenname + " " + uploadedBy.surname + "</td>";
+            } else {
+                appendString += "<td>" + " " + "</td>";
+            }
+            appendString += "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td></tr>";
+
+            reportTabelle.append(appendString);
+        });
+    });
+</script>
 </body>
 </html>
