--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -6,63 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
-
-    <script>
-        $(document).ready(async function () {
-            // Hole ID und Typ des Nutzers aus dem Session Storage
-            let participantId = sessionStorage.getItem("participantId");
-            let participantType = sessionStorage.getItem("participantType");
-
-            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Patienten handelt
-            if (participantType != "Patient") {
-                window.location.href = "../index.html";
-            }
-
-            // Hole Profil Daten des Patienten aus der Blockchain, falls sie nicht im Session Storage gespeichert sind.
-            if (sessionStorage.getItem("patientProfil") == null) {
-                // Hole Profil Daten des Nutzers aus der Blockchain
-                const response = await fetch(serverIp + "/api/org.oshealthrec.network.Patient/" + participantId, {
-                    method: 'GET',
-                    credentials: 'include'
-                });
-                let profilJson = await response.json();
-
-                // Speichere Profil Daten im SessionStorage
-                let patientProfil = JSON.stringify(profilJson);
-                sessionStorage.setItem("patientProfil", patientProfil);
-            }
-
-            // Hole Patienten Profil aus dem SessionStorage
-            let patientProfil = JSON.parse(sessionStorage.getItem("patientProfil"));
-
-            // Hole Textfelder als jquery Variable
-            let vorname = $('#vorname');
-            let nachname = $('#nachname');
-            let geschlecht = $('#geschlecht');
-            let geburtsdatum = $('#geburtsdatum');
-            let blutgruppe = $('#blutgruppe');
-            let notfallkontakt = $('#notfallkontakt')
-
-            // Setz Werte der Textfelder
-            vorname.text(patientProfil.givenname);
-            nachname.text(patientProfil.surname);
-            geschlecht.text(patientProfil.sex);
-            geburtsdatum.text(patientProfil.birthday);
-            blutgruppe.text(patientProfil.bloodType);
-            notfallkontakt.text(patientProfil.emergency_contact);
-        })
-    </script>
 </head>
 <body class="patient-profil">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -113,10 +69,63 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 <script src="../app.js"></script>
+
+
+<script>
+    $(document).ready(async function () {
+        // Hole ID und Typ des Nutzers aus dem Session Storage
+        let participantId = sessionStorage.getItem("participantId");
+        let participantType = sessionStorage.getItem("participantType");
+
+        // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Patienten handelt
+        if (participantType != "Patient") {
+            window.location.href = "../index.html";
+        }
+
+        // Hole Profil Daten des Patienten aus der Blockchain, falls sie nicht im Session Storage gespeichert sind.
+        if (sessionStorage.getItem("patientProfil") == null) {
+            // Hole Profil Daten des Nutzers aus der Blockchain
+            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Patient/" + participantId, {
+                method: 'GET',
+                credentials: 'include'
+            });
+            let profilJson = await response.json();
+
+            // Speichere Profil Daten im SessionStorage
+            let patientProfil = JSON.stringify(profilJson);
+            sessionStorage.setItem("patientProfil", patientProfil);
+        }
+
+        // Hole Patienten Profil aus dem SessionStorage
+        let patientProfil = JSON.parse(sessionStorage.getItem("patientProfil"));
+
+        // Hole Textfelder als jquery Variable
+        let vorname = $('#vorname');
+        let nachname = $('#nachname');
+        let geschlecht = $('#geschlecht');
+        let geburtsdatum = $('#geburtsdatum');
+        let blutgruppe = $('#blutgruppe');
+        let notfallkontakt = $('#notfallkontakt')
+
+        // Setz Werte der Textfelder
+        vorname.text(patientProfil.givenname);
+        nachname.text(patientProfil.surname);
+        geschlecht.text(patientProfil.sex);
+        geburtsdatum.text(patientProfil.birthday);
+        blutgruppe.text(patientProfil.bloodType);
+        notfallkontakt.text(patientProfil.emergency_contact);
+    });
+</script>
 </body>
 </html>
